--- a/wp-content/themes/HireImmigrants/css/hire-immigrants.css
+++ b/wp-content/themes/HireImmigrants/css/hire-immigrants.css
@@ -2310,6 +2310,9 @@ header {
   background-position-y: -80px;
   background-size: 100%;
   padding-top: 145px; }
+  @media only screen and (max-width: 767px) {
+    .about-page .about-banner {
+      padding-top: 50px; } }
   .about-page .about-banner h3 {
     font-size: 40px;
     font-family: "TruenoLight";
@@ -2318,6 +2321,10 @@ header {
     display: block;
     text-align: center;
     margin-bottom: 20px; }
+    @media only screen and (max-width: 767px) {
+      .about-page .about-banner h3 {
+        font-size: 22px;
+        line-height: 34px; } }
   .about-page .about-banner p {
     color: #828282;
     font-size: 24px;
@@ -2325,15 +2332,38 @@ header {
     font-family: Georgia, Times, "Times New Roman", serif;
     display: block;
     text-align: center; }
+    @media only screen and (max-width: 767px) {
+      .about-page .about-banner p {
+        font-size: 16px;
+        line-height: 26px; } }
   .about-page .about-banner .item-row {
     padding-top: 95px;
     display: flex;
     justify-content: space-between;
     margin-bottom: 190px; }
+    @media only screen and (max-width: 767px) {
+      .about-page .about-banner .item-row {
+        padding-top: 40px;
+        display: block;
+        margin-bottom: 60px; } }
+    @media only screen and (max-width: 767px) {
+      .about-page .about-banner .item-row .item {
+        clear: both;
+        margin-bottom: 35px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between; } }
     .about-page .about-banner .item-row .item img {
       display: block;
       margin: 0 auto;
       margin-bottom: 25px; }
+      @media only screen and (max-width: 767px) {
+        .about-page .about-banner .item-row .item img {
+          width: 50px;
+          height: auto;
+          margin-right: 25px;
+          margin-bottom: 0; } }
     .about-page .about-banner .item-row .item span {
       font-size: 20px;
       color: #4a4a4a;
@@ -2341,6 +2371,12 @@ header {
       line-height: 34px;
       display: block;
       text-align: center; }
+      @media only screen and (max-width: 767px) {
+        .about-page .about-banner .item-row .item span {
+          text-align: left;
+          flex-grow: 1;
+          font-size: 16px;
+          line-height: 26px; } }
 
 .about-page .mission h3, .about-page .activities h3 {
   font-size: 40px;
@@ -2348,25 +2384,50 @@ header {
   line-height: 64px;
   color: #4a4a4a;
   display: block;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  margin-bottom: 15px; }
+  @media only screen and (max-width: 767px) {
+    .about-page .mission h3, .about-page .activities h3 {
+      font-size: 22px;
+      line-height: 34px; } }
 
 .about-page .mission .item, .about-page .activities .item {
   clear: both;
   margin-bottom: 100px; }
+  @media only screen and (max-width: 767px) {
+    .about-page .mission .item, .about-page .activities .item {
+      margin-bottom: 35px; } }
   .about-page .mission .item img, .about-page .activities .item img {
     float: left;
     margin-right: 50px; }
+    @media only screen and (max-width: 767px) {
+      .about-page .mission .item img, .about-page .activities .item img {
+        float: none;
+        margin-right: 0;
+        width: 50px;
+        margin: 0 auto 15px auto;
+        display: block; } }
   .about-page .mission .item span, .about-page .activities .item span {
     font-size: 24px;
     font-family: AvenirLTStd-Medium;
     color: #4a4a4a;
     display: inline-block;
     margin-bottom: 15px; }
+    @media only screen and (max-width: 767px) {
+      .about-page .mission .item span, .about-page .activities .item span {
+        font-size: 16px;
+        text-align: center;
+        display: block; } }
   .about-page .mission .item p, .about-page .activities .item p {
     font-size: 20px;
     line-height: 36px;
     color: #4a4a4a;
     font-family: Georgia, Times, "Times New Roman", serif; }
+    @media only screen and (max-width: 767px) {
+      .about-page .mission .item p, .about-page .activities .item p {
+        font-size: 16px;
+        line-height: 26px;
+        text-align: center; } }
 
 .about-page .mission > span {
   font-size: 18px;
@@ -2375,6 +2436,10 @@ header {
   font-family: "TruenoLight";
   display: block;
   margin-bottom: 26px; }
+  @media only screen and (max-width: 767px) {
+    .about-page .mission > span {
+      font-size: 12px;
+      margin-bottom: 15px; } }
 
 .about-page .mission > p {
   color: #828282;
@@ -2383,9 +2448,17 @@ header {
   font-family: Georgia, Times, "Times New Roman", serif;
   display: block;
   margin-bottom: 70px; }
+  @media only screen and (max-width: 767px) {
+    .about-page .mission > p {
+      font-size: 16px;
+      line-height: 26px;
+      margin-bottom: 35px; } }
 
 .about-page .activities h3 {
   margin-bottom: 100px; }
+  @media only screen and (max-width: 767px) {
+    .about-page .activities h3 {
+      margin-bottom: 50px; } }
 
 .fourOhFour {
   padding-top: 90px; }
@@ -2446,6 +2519,11 @@ header {
   margin: 0;
   border: solid 1px #9b9b9b;
   height: 50px; }
+  @media only screen and (max-width: 767px) {
+    .search-page .no-results-search-form input {
+      float: none;
+      width: 100%;
+      margin-bottom: 15px; } }
 
 .search-page .no-results-search-form button {
   float: right;
@@ -2453,6 +2531,10 @@ header {
   border: none;
   background: #4a4b9b;
   height: 50px; }
+  @media only screen and (max-width: 767px) {
+    .search-page .no-results-search-form button {
+      float: none;
+      width: 100%; } }
   .search-page .no-results-search-form button .ico {
     fill: #fff;
     width: 25px;
